--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -597,6 +597,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Country'].isnull().sum() "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {
     "scrolled": false
@@ -643,6 +663,27 @@
     "#### Question 2\n",
     "\n",
     "**2.** What are the top countries with the highest average salary for developers?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12891"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We consider only available info. From an economic view it is consistent the result (Developed countries pay more)\n",
+    "df.shape[0]-df['Salary'].isnull().sum()"
    ]
   },
   {
@@ -696,6 +737,27 @@
     "#### Question 3\n",
     "\n",
     "**3.** Remote vs..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44008"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Here we have enough info to make some analysis. Missing is not an issue and consistent across conuntries\n",
+    "df.shape[0]-df['HomeRemote'].isnull().sum()"
    ]
   },
   {
